# curling

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md
cmake/: curlingConfig.cmake.in
docs/: CMakeLists.txt
examples/: CMakeLists.txt
examples/example_01/: CMakeLists.txt  main.cpp
examples/example_02/: CMakeLists.txt  main.cpp
examples/example_03/: CMakeLists.txt  main.cpp
examples/example_04/: CMakeLists.txt  main.cpp
examples/example_05/: CMakeLists.txt  main.cpp
include/: curling.hpp
include/curling/: cancellation_token.hpp  context.hpp  error.hpp  http_client.hpp  http_content.hpp  http_factory.hpp  http_headers.hpp  http_request_headers.hpp  http_request_message.hpp  http_response_headers.hpp  http_response_message.hpp  result.hpp  uri.hpp
src/: CMakeLists.txt  cancellation_token.cpp  context.cpp  http_client.cpp  http_content.cpp  http_factory.cpp  http_headers.cpp  http_request_headers.cpp  http_request_message.cpp  http_response_headers.cpp  http_response_message.cpp  tracing.cpp  tracing.hpp  uri.cpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  http_client_tests.cpp  http_factory_tests.cpp  uri_tests.cpp
